--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>I'll eventually do something with this</h1>
 
-<a href="https://edwinlangley.co.uk">- Edwin</a>
+<h2><a href="https://edwinlangley.co.uk">- Edwin</a></h2>
