--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<h1>I'll eventually do something with this</h1>
+ <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Site Audit - Free SEO Tools</title>
+  <meta name="author" content="Edwin Langley">
+  <meta name="description" content="Free SEO tools at Site Audit. Search to see what search engine optimisation improvements can be made on your site.">
+  <meta name="keywords" content="SEO, Tools, Search, Engine, Optimisation, Site, Audit, Free">
+  </head>
+  <body>
+  <h1>I'll eventually do something with this</h1>
 
 <h2><a href="https://edwinlangley.co.uk">- Edwin</a></h2>
+  </body>
+</html>
+
+
+
+
