--- a/index.html
+++ b/index.html
@@ -1,19 +1,98 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+<head>
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Site Audit - Free SEO Tools</title>
+  <title>Site Audit - Free SEO Tools</title>
   <meta name="author" content="Edwin Langley">
-  <meta name="description" content="Free SEO tools at Site Audit. Search to see what search engine optimisation improvements can be made on your site.">
+  <meta name="description"
+        content="Free SEO tools at Site Audit. Search to see what search engine optimisation improvements can be made on your site.">
   <meta name="keywords" content="SEO, Tools, Search, Engine, Optimisation, Site, Audit, Free">
-  </head>
-  <body>
-  <h1>I'll eventually do something with this</h1>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<body style="background-color: #521945 ">
 
-<h2><a href="https://edwinlangley.co.uk">- Edwin</a></h2>
-  </body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="https://site-audit.app">Site Audit</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="https://site-audit.app">Home <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="mt-5" style="text-align: center; color: white">
+    <h1>Site Audit - Free SEO Audit</h1>
+  </div>
+  <div class="mt-3" style="text-align: center; color: white">
+    <p>Use this website to perform a free SEO audit of your domain.</p>
+  </div>
+  <div class="input-group mb-3 mt-5">
+    <input type="text" class="form-control"  placeholder="Domain" aria-label="Domain" aria-describedby="basic-addon2">
+    <div class="input-group-append">
+      <button class="btn btn-outline-secondary" style="background-color: white;" type="button">Audit</button>
+    </div>
+  </div>
+</div>
+
+
+<footer class="footer">
+  <div class="container" style="text-align: center">
+    <span class="text-muted">Copyright Site Audit 2021 - <a href="https://edwinlangley.co.uk">Edwin Langley</a></span>
+  </div>
+</footer>
+
+
+<style>
+
+  /* Sticky footer styles
+-------------------------------------------------- */
+  html {
+    position: relative;
+    min-height: 100%;
+  }
+  body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+  }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  }
+
+
+  /* Custom page CSS
+  -------------------------------------------------- */
+  /* Not required for template or sticky footer method. */
+
+  .container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+  }
+  .vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+
+</style>
+
+</body>
 </html>
 
 
