--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
     <h1>Site Audit - Free SEO Audit</h1>
   </div>
   <div class="mt-3" style="text-align: center; color: white">
-    <p>Use this website to perform a free SEO audit of your domain.</p>
+    <p>A free tool to perform a search engine optimisation audit on your website.</p>
+  </div>
+  <div class="mt-3" style="text-align: center; color: white">
+    <p>Receive free and fast advice on how to improve your Google / Bing search rankings.
+    Make small changes to your markup and watch appear your name climb the search results. </p>
+  </div>
+  <div class="mt-3" style="text-align: center; color: white">
+    <p>Please ensure that you are the owner of the domain or have the owners permission to perform this check.
+    Our servers will check to see that the target web page allows crawling by checking the active robots.txt file. </p>
   </div>
   <div class="input-group mb-3 mt-5">
     <input type="text" class="form-control"  placeholder="Domain" aria-label="Domain" aria-describedby="basic-addon2">
