--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div class="container">
   <div class="mt-4" style="text-align: center; color: white">
-    <h1>Site Audit - Free SEO Audit</h1>
+    <h1>Site Audit - Free SEO Advice</h1>
   </div>
   <div class="mt-3" style="text-align: center; color: white">
     <p>A free tool to perform a search engine optimisation audit on your website.</p>
