--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Site Audit - Free SEO Tools</title>
+  <title>Site Audit - Free SEO Tools and Advice</title>
   <meta name="author" content="Edwin Langley">
   <meta name="description"
         content="Free SEO tools at Site Audit. Search to see what search engine optimisation improvements can be made on your site.">
