--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="input-group mb-3 mt-4">
     <input type="text" class="form-control"  placeholder="Domain" aria-label="Domain" aria-describedby="basic-addon2">
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary" style="background-color: white;" type="button">Audit</button>
+      <button class="btn btn-outline-secondary" style="background-color: white;" type="button">Analyse</button>
     </div>
   </div>
 </div>
