--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         content="Free SEO tools at Site Audit. Search to see what search engine optimisation improvements can be made on your site.">
   <meta name="keywords" content="SEO, Tools, Search, Engine, Optimisation, Site, Audit, Free">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel=icon href="/favicon.png">
 </head>
 <body style="background-color: #521945 ">
 
