--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <footer class="footer">
   <div class="container" style="text-align: center">
-    <span class="text-muted">Copyright Site Audit 2021 - <a href="https://edwinlangley.co.uk">Edwin Langley</a></span>
+    <span class="text-muted">©<a href="https://edwinlangley.co.uk"> Edwin Langley. </a>All rights reserved.</span>
   </div>
 </footer>
 
