--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="input-group mb-3 mt-5">
     <input type="text" class="form-control"  placeholder="Domain" aria-label="Domain" aria-describedby="basic-addon2">
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary" style="background-color: white;" type="button">Analyse</button>
+      <button class="btn btn-outline-secondary" style="background-color: white;" onclick="alert('I promise I\'ll get round to finishing this - Edwin')" type="button">Analyse</button>
     </div>
   </div>
 </div>
