--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <div class="mt-3" style="text-align: center; color: white">
     <p>Receive free and fast advice on how to improve your Google / Bing search rankings.
-    Make small changes to your markup and watch appear your name climb the search results. </p>
+    Make small changes to your markup and watch your name climb the search results. </p>
   </div>
   <div class="mt-3" style="text-align: center; color: white">
     <p>Please ensure that you are the owner of the domain or have the owners permission to perform this check.
