--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel=icon href="/favicon.png">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VL7W39GGYX"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -20,8 +21,10 @@
 
     gtag('config', 'G-VL7W39GGYX');
   </script>
+
 </head>
 <body style="background-color: #570057 ">
+
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -65,7 +68,9 @@
 
 <footer class="footer">
   <div class="container" style="text-align: center">
-    <span class="text-muted">©<a href="https://edwinlangley.co.uk"> Edwin Langley. </a>All rights reserved.</span>
+    <span class="text-muted" style="font-size: small">©<a href="https://edwinlangley.co.uk"> Edwin Langley.</a> By using this site you agree to the <a
+            href="https://site-audit.app/privacy">Cookie Policy</a></span>
+
   </div>
 </footer>
 
@@ -109,6 +114,7 @@
   }
 
 </style>
+
 
 </body>
 </html>
