--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <footer class="footer">
   <div class="container" style="text-align: center">
     <span class="text-muted" style="font-size: small">©<a href="https://edwinlangley.co.uk"> Edwin Langley.</a> By using this site you agree to the <a
-            href="https://site-audit.app/privacy">Cookie Policy</a></span>
+            href="https://site-audit.app/privacy.html">Cookie Policy</a></span>
 
   </div>
 </footer>
