--- a/privacy.html
+++ b/privacy.html
@@ -22,7 +22,7 @@
 <p>You can opt out of targeted advertising by:<br />GOOGLE - https://www.google.com/settings/ads/anonymous<br /><br /></p>
 <p>Additionally, you can opt out of some of these services by visiting the Digital Advertising Alliance&rsquo;s opt-out portal at: http://optout.aboutads.info/.</p>
 <p>DO NOT TRACK<br />Please note that we do not alter our Site&rsquo;s data collection and use practices when we see a Do Not Track signal from your browser.</p>
-<p>If you are a European resident, you have the right to access personal information we hold about you and to ask that your personal information be corrected, updated, or deleted. If you would like to exercise this right, please contact us through the contact information below.</p>
+<p>If you are a European resident, you have the right to access personal information we hold about you and to ask that your personal information be corrected, updated, or deleted.</p>
 <p>Additionally, if you are a European resident we note that we are processing your information in order to fulfill contracts we might have with you (for example if you make an order through the Site), or otherwise to pursue our legitimate business interests listed above. Additionally, please note that your information will be transferred outside of Europe, including to Canada and the United States.</p>
 <p>The Site is not intended for individuals under the age of 18.</p>
 <p>CHANGES<br />We may update this privacy policy from time to time in order to reflect, for example, changes to our practices or for other operational, legal or regulatory reasons.</p>
